cabal-version:      3.0
name:               RLC
version:            0.1.0.0
license:            BSD-3-Clause
author:             Sam Cohen
maintainer:         samcohen@uchicago.edu
build-type:         Simple

common warnings
    ghc-options: -Wall

executable RLC
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , HPDF
                    , linear
                    , random
    hs-source-dirs:   app
    default-language: GHC2021
